Correct overflow issue in li

--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,6 @@ input[type="button"]:focus {
     background: transparent;
 
 }
+/* li{
+    overflow: scroll;
+} */
